<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myTextLinear"
        android:layout_width="160dp"
        android:layout_height="82dp"
        android:text="@string/relativelayoutText" />

    <Button
        android:id="@+id/myButtonLinear"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:text="@string/relativelayoutButton" />

    <EditText
        android:id="@+id/myEditText"
        android:layout_width="165dp"
        android:layout_height="83dp"
        android:hint="@string/relativelayoutEditText"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dog" />

</RelativeLayout>