<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="411dp"
    android:layout_height="415dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="316dp"
    android:background="@color/purple"
    tools:context=".SecondFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="244dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/dog2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/myEditText"
        android:layout_width="165dp"
        android:layout_height="83dp"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="108dp"
        android:hint="@string/constraintlayoutEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/myButtonLinear"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/black"
        android:text="@string/constraintButton"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/myButton2"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/constraintButton2"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="420dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="409dp" />

</androidx.constraintlayout.widget.ConstraintLayout>